--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding: 0;
 }
+a{
+    text-decoration: none;
+}
 body{
     /* background: #f0f0f0; */
     font-family: Arial, Helvetica, sans-serif;
@@ -44,6 +47,7 @@ body{
     padding: 50px;
     font-size: 40px;
     font-weight: bold;
+    min-height: 70vh;
 }
 .body .text-container{
     opacity: 0.4;
@@ -100,9 +104,11 @@ body{
     justify-content: center;
     color: #02506e;
     text-transform: uppercase;
+    font-size: 1rem;
 }
 .popup .window .icon svg{
     height: 100%;
+    margin: 0 10px;
 }
 .popup .window .numbers{
     display: flex;
@@ -140,4 +146,15 @@ body{
     width: 150px;
     color: #b90fe4;
 }
-/* font-size: 20px;
+.footer {
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: 20px;
+  padding: 20px;
+
+}
+.social-links a {
+  margin: 0 10px;
+  color: #3f4750;
+  font-size: 25px;
+}
