--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -11,7 +11,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .header{
-    height: 70px;
+    height: 80px;
     width: 100%;
     display: flex;
     position: sticky;
@@ -23,6 +23,7 @@ body{
 .header .logos{
     display: flex;
     height: 100%;
+    padding: 5px 0;
 }
 .header img{
     width: auto;
@@ -95,6 +96,18 @@ body{
     transform: translate(-50%,-50%);
     padding: 20px 40px 10px;
 }
+.popup .window h2.sorry{
+    text-align: center;
+    font-size: 1.7rem;
+    margin: 20px 0 15px;
+    color: #0888bb;
+    padding: 0 0 10px;
+    border-bottom: 2px solid #0000004f;
+}
+.popup .window h3{
+    font-size: 1.3rem;
+    margin: 30px 0;
+}
 .popup .window .icon{
     height: 80px;
     border-bottom: 2px solid #0000004f;
@@ -128,6 +141,9 @@ body{
     border-radius: 50px;
     overflow: hidden;
     margin: 0 20px 0 0;
+}
+.popup .window .numbers .process-container h1{
+    width: 100px;
 }
 .popup .window .numbers .process-container .process>div{
     background: linear-gradient(to right,#b90fe4,#0888bb);
@@ -185,4 +201,15 @@ body{
   margin: 0 10px;
   color: #3f4750;
   font-size: 25px;
+}
+
+@media (max-width: 768px) {
+.header h1,.header .base-line{
+    display: none;
+}
+.header .logos{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+}
 }
