--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -8,13 +8,14 @@ a{
 }
 body{
     /* background: #f0f0f0; */
+    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
 .header{
     height: 80px;
     width: 100%;
-    display: flex;
     position: sticky;
+    display: flex;
     background: #f9f9f9;
     box-shadow: 0 0 15px #0000002c;
     padding: 0 40px;
@@ -204,7 +205,7 @@ body{
 }
 
 @media (max-width: 768px) {
-.header h1,.header .base-line{
+.header h1,.header .base-line,.header,.body,.main_footer{
     display: none;
 }
 .header .logos{
